feat: add method do enqueue calculation request

--- a/collect-calculator.query/collect-calculator.query-api/collect-calculator.query-api.csproj
+++ b/collect-calculator.query/collect-calculator.query-api/collect-calculator.query-api.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\collect-calculator.query-domain\collect-calculator.query-domain.csproj" />
+    <ProjectReference Include="..\collect-calculator.query-infra-ioc\collect-calculator.query-infra-ioc.csproj" />
+  </ItemGroup>
+
 </Project>
