--- a/collect-calculator.query/collect-calculator.query-api/appsettings.Development.json
+++ b/collect-calculator.query/collect-calculator.query-api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMQSettings": {
+    "ConnectionString":  "amqp://admin:admin@localhost"
   }
 }
