--- a/collect-environment.yaml
+++ b/collect-environment.yaml
@@ -4,7 +4,7 @@ services: # Services to deploy
   dockerapp1:
     image: dockerapp:1.0 #image name, Default:- Folder Name
     build:
-      context: collect-calculator.query
+      context: collect.calculator-api
       dockerfile: Dockerfile # path to dockerfile
     # ports:
     #   - "3501:8080" # HOST_PORT:CONTAINER_PORT
@@ -21,7 +21,7 @@ services: # Services to deploy
   apigateway:
     image: apigateway:1.0
     build:
-      context: collect-api-gateway
+      context: collect.api-gateway
       dockerfile: Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
